# lolstreamers

./: .gitignore  LICENSE  README.md  docker-compose.yml  filebeat-apache-query-params-ingest-pipeline.json  filebeat.yml  manage.py  pyproject.toml
lolstreamers/: asgi.py  settings.py  urls.py  wsgi.py
lolstreamsearch/: admin.py  apps.py  elasticsearch_api.py  urls.py  views.py  yt_es_documents.py
lolstreamsearch/migrations/: 0001_initial.py
lolstreamsearch/templates/lolstreamsearch/: index.html
src/: Dockerfile  docker-compose.yml  filebeat.yml  google_api.py  pytest.ini
src/lolstreamers/: settings.py  urls.py
src/lolstreamers/settings/: __init__.py  base.py  develop.py  production.py
src/lolstreamers/webserver/: 000-reject-ssl.conf  000-reject.conf  apache.conf  default-ssl.conf  searchtherift-logging.conf  searchtherift-proxy.conf
src/lolstreamsearch/: elasticsearch_api.py  models.py  urls.py  views.py  yt_es_documents.py
src/lolstreamsearch/api/: authentication.py  initial_data.json  league.py  lolstream_index_template.json  middleware.py  opgg_serializer.py  views.py  yt_es_documents.py  yturl_serializer.py
src/lolstreamsearch/helper/: fill_db.py
src/tests/: conftest.py
src/tests/test_api/: api_datasets.py  test_league.py
